--- a/SkiaSketchMap/Agro/Agro.csproj
+++ b/SkiaSketchMap/Agro/Agro.csproj
@@ -20,7 +20,10 @@
 		<PackageReference Include="SkiaSharp.NativeAssets.Linux.NoDependencies" Version="2.88.3" />-->
 		<PackageReference Include="NetTopologySuite.Core" Version="1.15.3" />
 		<PackageReference Include="ProjNET4GeoAPI" Version="1.4.1" />
-		<PackageReference Include="System.Data.SQLite.Core" Version="1.0.116" />
+		<!--<PackageReference Include="System.Data.SQLite.Core" Version="1.0.116" />-->
+		<PackageReference Include="Microsoft.Data.Sqlite.Core" Version="8.0.0-rc.2.23480.1" />
+		<!--<PackageReference Include="SQLitePCLRaw.lib.e_sqlite3" Version="2.1.6" />-->
+		<PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.1.6" />
 		<PackageReference Include="MySql.Data" Version="8.0.32.1" />
 	</ItemGroup>
 	<ItemGroup>
