--- a/Entrance/DataOperatorTool/App.config
+++ b/Entrance/DataOperatorTool/App.config
@@ -4,8 +4,8 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6"/>
     </startup>
   <appSettings>
-    <add key="AppType" value="SQLiteWnd1"/>
-	  <add key="DownFbfDk" value="true1"/>
-	  <add key="DownLoadUrl" value="http://localhost:5000"/>
+	  <!--AppType is [SQLiteWnd|WebService|ShapeFileWnd] -->
+    <add key="AppType" value="WebService"/>
+	  <add key="WebServiceUrl" value="http://localhost:5000"/>
   </appSettings>
 </configuration>
